Update 2120/07/07 15h30 Ali/Nadir

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="hero-img">
           <img src="images/bg_img.jpg" alt="img" />
         </div>
-        <button class="btn-signup modal-btn">
+        <button class="btn-signup modal-btn"> <!-- bouton version mobile -->
           Je m'inscris
         </button>
       </div>
@@ -119,7 +119,7 @@
                 <span id="gamesError"></span>  
               </div>
 
-              <p class="text-label">Quelles villes ?</p>
+              <p class="text-label">Quelle(s) ville(s) ?</p>
               <div
                 class="formData">
                 <input
