--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
               name="reserve"
               action="index.html"
               method="get"
-            
             >
             <div class="formData">
             <label class="first-label" for="first">Prénom</label><br>
@@ -105,6 +104,9 @@
               type="date"
               id="birthdate"
               name="birthdate"
+              min="1920-01-01"
+              max="9999-12-31"
+              value=""
             /><br>
             <span id="birthdateError"></span>  
           </div>
@@ -112,7 +114,14 @@
               <div
                 class="formData">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <input 
+                type="number" 
+                class="text-control" 
+                id="quantity" 
+                name="quantity" 
+                min="0" 
+                max="99"
+                maxlength="2">
                 <span id="gamesError"></span>  
               </div>
 
@@ -222,6 +231,19 @@
           </div>
         </div>
       </div>
+
+    <!-- Modal for confirmation message-->
+
+      <div class="confirmation">
+        <div class="content">
+          <span class="confirmation"></span>
+          <div class="modal-body">
+            <h3>Merci! Votre réservation a bien été enregistrée.</h3>
+          </div>
+        </div>
+      </div>
+    
+
     </main>
     <footer>
       <p class="copyrights">
