--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="topnav" id="myTopnav">
     <div class="header-logo">
-      <img alt="logo" src="images/Logo.png" width="auto" height="auto" />
+      <img alt="logo" src="images/Logo.png"/>
     </div>
     <div class="main-navbar">
 
@@ -27,7 +27,6 @@
       </a>
     </div>
   </div>
-  </div>
   <main>
     <div class="hero-section">
       <div class="hero-content">
@@ -40,7 +39,6 @@
           aux réservations... Places limitées !
         </p>
         <button class="btn-signup modal-btn">
-          <!-- bouton -->
           Je m'inscris
         </button>
       </div>
@@ -59,8 +57,12 @@
         <div class="modal-body">
 
           <div id="confirmation">
-            <p>Merci! Votre réservation a bien été prise en compte.</p>
-          </div>
+            <div class="header-logo">
+              <img alt="logo" src="images/Logo.png"/>
+            </div><br/>             
+            <p>Merci!</p><br/> 
+            <p>Votre réservation a bien été prise en compte.</p>
+            </div>
 
           <form id="myForm" name="reserve" action="index.html" method="get">
             <div class="formData">
