--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="topnav" id="myTopnav">
     <div class="header-logo">
-      <img alt="logo" src="images/Logo.png"/>
+      <img alt="logo" src="images/Logo.png" />
     </div>
     <div class="main-navbar">
 
@@ -56,14 +56,6 @@
         <span class="close"></span>
         <div class="modal-body">
 
-          <div id="confirmation">
-            <div class="header-logo">
-              <img alt="logo" src="images/Logo.png"/>
-            </div><br/>             
-            <p>Merci!</p><br/> 
-            <p>Votre réservation a bien été prise en compte.</p>
-            </div>
-
           <form id="myForm" name="reserve" action="index.html" method="get">
             <div class="formData">
               <label class="first-label" for="first">Prénom</label><br>
@@ -95,7 +87,7 @@
               <span id="gamesError"></span>
             </div>
 
-            <p class="text-label">Quelle(s) ville(s) ?</p>
+            <p class="text-label">Quelle ville?</p>
             <div class="formData">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
               <label class="checkbox-label" for="location1">
@@ -123,9 +115,7 @@
                 Portland</label>
             </div>
 
-            <span id="locationError"></span>
-            <!-- carefull: span for error to be kept outside the div!! if not bug: not checked by default & cannot click on button for check-->
-
+            <span id="locationError"></span><!-- span error 2 be kept outside the div!! if not bug: not checked by default & cannot click on button for check-->
 
             <div class="formData">
               <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
@@ -147,10 +137,17 @@
 
             <input class="btn-submit button" id="mySubmit" type="submit" value="C'est parti" />
           </form>
+
+          <div id="confirmation">
+            <div class="header-logo">
+              <img alt="logo" src="images/Logo.png" />
+            </div>
+            <p>Merci!</p>
+            <p>Votre réservation a bien été prise en compte.</p>
+          </div>
         </div>
       </div>
     </div>
-
   </main>
   <footer>
     <p class="copyrights">
